--- a/src/markdown/legal/cookie-policy.mdx
+++ b/src/markdown/legal/cookie-policy.mdx
@@ -10,18 +10,20 @@ This website (the **“Website”**) uses cookies to improve the user experience
 We use the following types of cookies for the purposes explained:
 
 <table class="table table-bordered table-striped">
-  <tr>
-    <th>Cookie provider</th>
-    <th>Purpose</th>
-  </tr>
-  <tr>
-    <td>Google Tag Manager / Google Analytics</td>
-    <td>Analytics and service improvements</td>
-  </tr>
-  <tr>
-    <td>Freshworks / Freshchat</td>
-    <td>Support chat</td>
-  </tr>
+  <tbody>
+    <tr>
+      <th>Cookie provider</th>
+      <th>Purpose</th>
+    </tr>
+    <tr>
+      <td>Google Tag Manager / Google Analytics</td>
+      <td>Analytics and service improvements</td>
+    </tr>
+    <tr>
+      <td>Freshworks / Freshchat</td>
+      <td>Support chat</td>
+    </tr>
+  </tbody>
 </table>
 
 
