--- a/src/markdown/legal/privacy-policy.mdx
+++ b/src/markdown/legal/privacy-policy.mdx
@@ -19,67 +19,71 @@ The following compilation will help you understand which data we handle and in w
 
 
 <table class="table table-bordered table-striped">
-  <col width="25%" />
-  <col width="25%" />
-  <col width="50%" />
-  <tr>
-    <th />
-    <th colspan="2">Details</th>
-  </tr>
-  <tr>
-    <td>Cap Table Data</td>
-    <td colspan="2">
-      Shareholder information<br />
-      Company information<br />
-      Share ledger transaction history<br />
-      Other cap table details
-    </td>
-  </tr>
-  <tr>
-    <td>General Personal Data</td>
-    <td colspan="2">
-      <strong>Identity and contact data</strong><br />
-      Name<br />
-      Date of birth<br />
-      Telephone numbers<br />
-      Email<br />
-      Postal address<br />
-      <strong>Financial and payment data</strong><br />
-      Credit card details<br />
-      <strong>Profile, usage and website interaction</strong><br />
-      Communication preferences<br />
-      Information about how you use our Website<br />
-      <strong>Technical data</strong><br />
-      Browser type and version<br />
-      Time zone setting<br />
-      Location data<br />
-      Operating system and platform
-    </td>
-  </tr>
-  <tr />
-  <tr>
-    <th />
-    <th>Provided to us</th>
-    <th>Our role</th>
-  </tr>
-  <tr>
-    <td rowspan="2">Cap Table Data</td>
-    <th>Indirectly by the company</th>
-    <td>
-      <strong>Data processor</strong><br />
-      We carry out the processing of Cap Table Data which we obtained indirectly by a company under the specific instructions of each company/data controller.
-    </td>
-  </tr>
-  <tr>
-    <th rowspan="2">Directly by you</th>
-    <td rowspan="2">
-      <strong>Data controller</strong><br />
-      We determine the means and purposes of the processing of General Personal Data, and Cap Table Data which we obtained directly from shareholders in accordance with this Privacy Policy.
-    </td>
-  </tr>
-  <tr>
-    <td>General Personal Data</td>
-  </tr>
+  <colgroup>
+    <col width="25%" />
+    <col width="25%" />
+    <col width="50%" />
+  </colgroup>
+  <tbody>
+    <tr>
+      <th />
+      <th colSpan="2">Details</th>
+    </tr>
+    <tr>
+      <td>Cap Table Data</td>
+      <td colSpan="2">
+        Shareholder information<br />
+        Company information<br />
+        Share ledger transaction history<br />
+        Other cap table details
+      </td>
+    </tr>
+    <tr>
+      <td>General Personal Data</td>
+      <td colSpan="2">
+        <strong>Identity and contact data</strong><br />
+        Name<br />
+        Date of birth<br />
+        Telephone numbers<br />
+        Email<br />
+        Postal address<br />
+        <strong>Financial and payment data</strong><br />
+        Credit card details<br />
+        <strong>Profile, usage and website interaction</strong><br />
+        Communication preferences<br />
+        Information about how you use our Website<br />
+        <strong>Technical data</strong><br />
+        Browser type and version<br />
+        Time zone setting<br />
+        Location data<br />
+        Operating system and platform
+      </td>
+    </tr>
+    <tr />
+    <tr>
+      <th />
+      <th>Provided to us</th>
+      <th>Our role</th>
+    </tr>
+    <tr>
+      <td rowSpan="2">Cap Table Data</td>
+      <th>Indirectly by the company</th>
+      <td>
+        <strong>Data processor</strong><br />
+        We carry out the processing of Cap Table Data which we obtained indirectly by a company under the specific instructions of each company/data controller.
+      </td>
+    </tr>
+    <tr>
+      <th rowSpan="2">Directly by you</th>
+      <td rowSpan="2">
+        <strong>Data controller</strong><br />
+        We determine the means and purposes of the processing of General Personal Data, and Cap Table Data which we obtained directly from shareholders in accordance with this Privacy Policy.
+      </td>
+    </tr>
+    <tr>
+      <td>General Personal Data</td>
+    </tr>
+  </tbody>
 </table>
 
 
