--- a/src/markdown/legal/terms.mdx
+++ b/src/markdown/legal/terms.mdx
@@ -224,34 +224,36 @@ Neither Party can be held liable for situations (delays, failure to perform any 
 ### 13 Contact and Notice
 
 <table class="table table-bordered table-striped">
-  <tr>
-    <th>Communication to Ledgy</th>
-    <th>Channel</th>
-  </tr>
-  <tr>
-    <td>Contact</td>
-    <td>Email to: <a href="mailto:support@ledgy.com">support@ledgy.com</a></td>
-  </tr>
-  <tr>
-    <td>Notice</td>
-    <td>
-      Email to: <a href="mailto:support@ledgy.com">support@ledgy.com</a><br />
-      Registered letter to:<br />
-      Ledgy AG, Forchstrasse 60, 8008 Zurich, Switzerland
-    </td>
-  </tr>
-  <tr>
-    <th>Communication to you</th>
-    <th>Channel</th>
-  </tr>
-  <tr>
-    <td>Contact</td>
-    <td>Notice on the Website</td>
-  </tr>
-  <tr>
-    <td>Notice</td>
-    <td>Message to the email address associated with your customer account</td>
-  </tr>
+  <tbody>
+    <tr>
+      <th>Communication to Ledgy</th>
+      <th>Channel</th>
+    </tr>
+    <tr>
+      <td>Contact</td>
+      <td>Email to: <a href="mailto:support@ledgy.com">support@ledgy.com</a></td>
+    </tr>
+    <tr>
+      <td>Notice</td>
+      <td>
+        Email to: <a href="mailto:support@ledgy.com">support@ledgy.com</a><br />
+        Registered letter to:<br />
+        Ledgy AG, Forchstrasse 60, 8008 Zurich, Switzerland
+      </td>
+    </tr>
+    <tr>
+      <th>Communication to you</th>
+      <th>Channel</th>
+    </tr>
+    <tr>
+      <td>Contact</td>
+      <td>Notice on the Website</td>
+    </tr>
+    <tr>
+      <td>Notice</td>
+      <td>Message to the email address associated with your customer account</td>
+    </tr>
+  </tbody>
 </table>
 
 It is your responsibility to keep your email address associated with your account current. You will be deemed as having received an email sent to the email address then associated with your account when we send the email, regardless of whether you actually receive the email.
