reporting post final rough draft

--- a/src/markdown/new-features/kpis-and-reports.mdx
+++ b/src/markdown/new-features/kpis-and-reports.mdx
@@ -1,8 +1,9 @@
 ---
 title: "KPIs & Reports"
 description: "Keep track of your KPIs and integrate your recurring reports on Ledgy"
-coverImage: ledgy.png
 images:
+  - KPI-values.png
+  - KPI-chart.png
   - report.png
 ---
 
@@ -14,16 +15,47 @@ As an investor, you want to know how the company is doing at all times, and appr
 
 ###### Suffer no more, Ledgy brings to you KPI tracking and recurring reports
 
+<Img src="KPI-values.png" align="left" size="300"/>
 
+<br />
+
+Integrate your key performance indicator values on Ledgy in a matter of minutes, copying and pasting existing values if needed.
+
+Ledgy will display beautiful graphs that you will be able to share with your investors and integrate in your reports.
+
+<Img src="KPI-chart.png" align="right" size="500"/>
+
+<br />
+&nbsp;
+<br />
+&nbsp;
+<br />
+&nbsp;
+<br />
+&nbsp;
+<br />
+&nbsp;
+<br />
+&nbsp;
+<br />
+&nbsp;
+<br />
+&nbsp;
+
+You can track as many activities as you want, whether it's revenue, planted trees, or rockets successfully landed on Mars.
+
+**Once your KPIs are up and running, it will be time to implement your recurring reports** 🚀
 
 
 <Img src="report.png" />
 
-What you can see above is an example of what a report looks like. With Ledgy Reports, you can also
+The awesomeness doesn't stop here. With Ledgy Reports, you can also
 * Create **templates** and use the same structure for every recurring report, which will save you time and keep your documents constistent
 * **Share** the report with your selected stakeholders by clicking on *Publish*
-
 
 ###### Ready to try it out?
 
 [Click here](https://app.ledgy.com) to go straight to the Ledgy app
+
+
+At Ledgy, we are always striving to thrive and bring the best solutions for your company and your investors. If you have any suggestions, don't hesitate to ​[contact us​](mailto:contact@ledgy.com).
