--- a/src/markdown/new-features/kpis-and-reports.mdx
+++ b/src/markdown/new-features/kpis-and-reports.mdx
@@ -23,24 +23,9 @@ Integrate your key performance indicator values on Ledgy in a matter of minutes,
 
 Ledgy will display beautiful graphs that you will be able to share with your investors and integrate in your reports.
 
-<Img src="KPI-chart.png" align="right" size="500"/>
+<Img src="KPI-chart.png"/>
 
 <br />
-&nbsp;
-<br />
-&nbsp;
-<br />
-&nbsp;
-<br />
-&nbsp;
-<br />
-&nbsp;
-<br />
-&nbsp;
-<br />
-&nbsp;
-<br />
-&nbsp;
 
 You can track as many activities as you want, whether it's revenue, planted trees, or rockets successfully landed on Mars.
 
