--- a/src/markdown/updates/kpis-and-reports.mdx
+++ b/src/markdown/updates/kpis-and-reports.mdx
@@ -1,6 +1,6 @@
 ---
 title: "KPIs & Reports"
-description: "Keep track of your KPIs and integrate your recurring reports on Ledgy"
+description: "Keep track of your KPIs and share your recurring reports through Ledgy"
 images:
   - KPI-values.png
   - KPI-chart.png
@@ -13,7 +13,7 @@ As a founder, you know how tedious it is to write recurrent reports, to keep up 
 
 As an investor, you want to know how the company is doing at all times, and appreciate proper and transparent communication.
 
-###### Suffer no more, Ledgy brings to you KPI tracking and recurring reports
+###### Now on Ledgy, KPI tracking and recurring reports
 
 <Img src="KPI-values.png" align="left" size="300"/>
 
@@ -34,7 +34,7 @@ You can track as many activities as you want, whether it’s revenue, planted tr
 
 <Img src="report.png" />
 
-The awesomeness doesn’t stop here. With Ledgy Reports, you can also
+With Ledgy Reports, you can also
 * Create **templates** and use the same structure for every recurring report, which will save you time and keep your documents consistent
 * **Share** the report with your selected stakeholders by clicking on *Publish*
 
@@ -43,4 +43,4 @@ The awesomeness doesn’t stop here. With Ledgy Reports, you can also
 [Click here](https://app.ledgy.com) to go straight to the Ledgy app
 
 
-At Ledgy, we are always striving to thrive and bring the best solutions for your company and your investors. If you have any suggestions, don’t hesitate to ​[contact us​](mailto:contact@ledgy.com).
+At Ledgy, we are always striving to help founders with all aspects around equity management and investor relations. If you have any suggestions, don’t hesitate to ​[contact us​](mailto:contact@ledgy.com).
