add cover to blogpost

--- a/src/markdown/updates/kpis-and-reports.mdx
+++ b/src/markdown/updates/kpis-and-reports.mdx
@@ -1,6 +1,7 @@
 ---
 title: "KPIs & Reports"
 description: "Keep track of your KPIs and share your recurring reports through Ledgy"
+coverImage: KPI-cover.png
 images:
   - KPI-values.png
   - KPI-chart.png
