--- a/src/markdown/legal/gdpr.mdx
+++ b/src/markdown/legal/gdpr.mdx
@@ -13,7 +13,7 @@ Personal data consists of any information that allows identifying a person direc
 
 ### Ledgy is GDPR compliant
 
-We understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us. We comply with the applicable data protection laws, including in particular the Swiss Federal Act on Data Protection (FADP) and the General Data Protection Regulation (GDPR).
+We understand how sensitive equity information is for any business. That’s why your privacy and your data’s security is crucial to us. We comply with the applicable data protection laws, including in particular the Swiss Federal Act on Data Protection (FADP) and the General Data Protection Regulation (GDPR).
 
 In the context of the GDPR, we have improved and incorporated various areas affected by the regulation, such as the legal basis for data processing, rights of data subjects, obligations of controllers and processors, privacy notice, response to security aspects, data breaches, privacy and data protection by design, data protection impact assessments, and data transfer mechanisms.
 
