--- a/src/markdown/legal/privacy-policy.mdx
+++ b/src/markdown/legal/privacy-policy.mdx
@@ -4,7 +4,7 @@ title: "Privacy Policy"
 description: "Privacy Policy at Ledgy"
 ---
 
-**We** (“Ledgy”, “we”, “our” or “us”) **understand how sensitive cap table information is for any business. That’s why your privacy and your data’s security is crucial to us.** We comply with the applicable data protection laws, including in particular the Swiss Federal Act on Data Protection (FADP) and the General Data Protection Regulation (GDPR).
+**We** (“Ledgy”, “we”, “our” or “us”) **understand how sensitive equity information is for any business. That’s why your privacy and your data’s security is crucial to us.** We comply with the applicable data protection laws, including in particular the Swiss Federal Act on Data Protection (FADP) and the General Data Protection Regulation (GDPR).
 
 This Privacy Policy explains the types of personal data we process (Section 1), the legal grounds on which we process it (Section 2), how we collect (Section 3) and protect that information (Section 4) and where we store it/who we share it with (Section 5) in the context of our services ([app.ledgy.com](https://app.ledgy.com) or the **“Services”**) and the Ledgy website ([www.ledgy.com](https://www.ledgy.com) or the **“Website”**), as well as the rights you have (Section 6). For information regarding the cookies we use, please refer to our [Cookie Policy](/legal/cookie-policy/).
 
